--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "test": "jest --runInBand",
     "debug": "nodemon -w --exec node index.js",
-    "dev": "nodemon index.js",
     "start": "node index.js",
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json ."
   },
@@ -15,11 +14,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
-    "express-rescue": "^1.1.30"
+    "express-rescue": "^1.1.30",
+    "joi": "^17.3.0"
   },
   "devDependencies": {
-    "crypto": "^1.0.1",
     "eslint": "^7.3.1",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-import": "^2.22.0",
