--- a/package.json
+++ b/package.json
@@ -13,18 +13,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
     "crypto": "^1.0.1",
     "crypto-js": "^4.0.0",
     "express": "^4.17.1",
     "express-rescue": "^1.1.30"
   },
   "devDependencies": {
-    "jest": "^26.6.1",
-    "nodemon": "^2.0.6",
-    "frisby": "^2.1.3",
+    "@hapi/boom": "^9.1.1",
+    "body-parser": "^1.19.0",
+    "boom": "^7.3.0",
     "eslint": "^7.3.1",
     "eslint-config-airbnb": "^18.2.0",
-    "eslint-plugin-import": "^2.22.0"
+    "eslint-plugin-import": "^2.22.0",
+    "frisby": "^2.1.3",
+    "httpie": "^1.1.2",
+    "jest": "^26.6.1",
+    "joi": "^17.3.0",
+    "nodemon": "^2.0.7"
   }
 }
