--- a/package.json
+++ b/package.json
@@ -14,10 +14,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@hapi/joi": "^17.1.1",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "express-rescue": "^1.1.30"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "eslint": "^7.3.1",
