--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-rescue": "^1.1.31"
   },
   "devDependencies": {
     "eslint": "^7.3.1",
